--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <HTML>
 
 <HEAD>
-    <!-- 부트스트랩 CSS -->
+    <meta charset="UTF-8">
+    <title>자바스크립트를 이용한 이미지 처리 프로젝트</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
 
     <!-- 부트스트랩 JS 및 종속성 -->
@@ -12,10 +13,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/js/bootstrap.min.js"
         integrity="sha512-d0l9Z4KjR4J0GAb5g5fD8UKzIO1jH3q+a0JtOZsb9+REcbtJfcOwpKjOYFw8EJJW2QzSmjPXOyJb/hdZPmLl2Q=="
         crossorigin="anonymous"></script>
+    <style>
+        #canvas-container {
+            display: flex;
+            justify-content: center;
+            margin: 15px;
+        }
 
+        .canvas-box {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0 15px;
+        }
+
+        .canvas-box label {
+            margin-bottom: 10px;
+        }
+    </style>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-
     <script lang="javascript">
         // 전역 변수부
         var inCanvas, inCtx, outCanvas, outCtx;
@@ -23,7 +40,7 @@
         var outImage, outH, outW; // 출력 파일, 출력 배열, 출력폭과 높이
         var inPaper, outPaper; // 종이
         var inFile;
-        var zoomValue = 1;
+
         // 함수 선언부
         //////////////////////
         //// 공통 함수부
@@ -34,7 +51,6 @@
             outCanvas = document.getElementById("outCanvas"); // 도화지에 접근
             outCtx = outCanvas.getContext('2d'); // 물감, 붓이 들은 통
         }
-
         function openRawImage() {
             inFile = document.getElementById("inFile").files[0]; // Lena256.raw
             // (중요!) 이미지의 폭과 높이를 계산
@@ -60,43 +76,38 @@
                         inImage[i][k] = blob.slice(sPixel, ePixel).charCodeAt(0); // 한점만 썰어내기. '뺇'--> 253
                     }
                 }
-                displayImage(true);
+                displayImage();
             }
 
         }
-
-
-        function displayImage(original=false) {
+        function displayImage() {
             // 입력 메모리를 종이에 콕콕콕 찍기...
-            if (original === true) {
-                inPaper = inCtx.createImageData(inH, inW); // 빈 종이 준비
-                for (var i = 0; i < inH; i++) {
-                    for (var k = 0; k < inW; k++) {
-                        var px = inImage[i][k];
-                        inPaper.data[(i * inH + k) * 4 + 0] = px; // R
-                        inPaper.data[(i * inH + k) * 4 + 1] = px; // G
-                        inPaper.data[(i * inH + k) * 4 + 2] = px; // B
-                        inPaper.data[(i * inH + k) * 4 + 3] = 255; // Alpha
-                    }
+            inPaper = inCtx.createImageData(inH, inW); // 빈 종이 준비
+            for (var i = 0; i < inH; i++) {
+                for (var k = 0; k < inW; k++) {
+                    var px = inImage[i][k];
+                    inPaper.data[(i * inH + k) * 4 + 0] = px; // R
+                    inPaper.data[(i * inH + k) * 4 + 1] = px; // G
+                    inPaper.data[(i * inH + k) * 4 + 2] = px; // B
+                    inPaper.data[(i * inH + k) * 4 + 3] = 255; // Alpha
                 }
-                inCtx.putImageData(inPaper, 0, 0); // 종이를 캔버스 왼쪽위에 딱 붙여서 부착.
-                // 출력 메모리를 종이에 콕콕콕 찍기...
             }
-            else {
-                inCanvas.height = outH;
-                inCanvas.width = outW;
-                inPaper = inCtx.createImageData(outH, outW); // 빈 종이 준비
-                for (var i = 0; i < outH; i++) {
-                    for (var k = 0; k < outW; k++) {
-                        var px = outImage[i][k];
-                        inPaper.data[(i * outH + k) * 4 + 0] = px; // R
-                        inPaper.data[(i * outH + k) * 4 + 1] = px; // G
-                        inPaper.data[(i * outH + k) * 4 + 2] = px; // B
-                        inPaper.data[(i * outH + k) * 4 + 3] = 255; // Alpha
-                    }
+            inCtx.putImageData(inPaper, 0, 0); // 종이를 캔버스 왼쪽위에 딱 붙여서 부착.
+            // 출력 메모리를 종이에 콕콕콕 찍기...
+            outCanvas.height = outH;
+            outCanvas.width = outW;
+            outPaper = outCtx.createImageData(outH, outW); // 빈 종이 준비
+            for (var i = 0; i < outH; i++) {
+                for (var k = 0; k < outW; k++) {
+                    var px = outImage[i][k];
+                    outPaper.data[(i * outH + k) * 4 + 0] = px; // R
+                    outPaper.data[(i * outH + k) * 4 + 1] = px; // G
+                    outPaper.data[(i * outH + k) * 4 + 2] = px; // B
+                    outPaper.data[(i * outH + k) * 4 + 3] = 255; // Alpha
                 }
-                inCtx.putImageData(inPaper, 0, 0); // 종이를 캔버스 왼쪽위에 딱 붙여서 부착.
             }
+            outCtx.putImageData(outPaper, 0, 0); // 종이를 캔버스 왼쪽위에 딱 붙여서 부착.
+
         }
         //////////////////////
         //// *** 영상 처리 함수부
@@ -428,14 +439,14 @@
         }
         function rotate2_image() {
             // (중요!) 출력 영상의 크기를 결정 --> 알고리즘에 따름.
-            // outH = inH;
-            // outW = inW;
-            // // 출력 이미지 메모리 할당.
-            // outImage = new Array(outH);
-            // for (var i = 0; i < outH; i++)
-            //     outImage[i] = new Array(outW);
+            outH = inH;
+            outW = inW;
+            // 출력 이미지 메모리 할당.
+            outImage = new Array(outH);
+            for (var i = 0; i < outH; i++)
+                outImage[i] = new Array(outW);
             // ** 진짜 영상처리 알고리즘 구현 **
-            var angle = parseInt(document.getElementById("rotateImage").value);
+            var angle = parseInt(prompt("각도", "45"));
             angle = angle * Math.PI / 180;
             // 공식
             // new_i = cos*(i-cx) - sin*(k-cy) + cx
@@ -499,7 +510,7 @@
         }
         function zoomIn2_image() {
             // (중요!) 출력 영상의 크기를 결정 --> 알고리즘에 따름.
-            var scale = zoomValue;
+            var scale = parseInt(prompt("확대배율", "2"));
             outH = parseInt(inH * scale);
             outW = parseInt(inW * scale);
             // 출력 이미지 메모리 할당.
@@ -517,15 +528,6 @@
             }
             // *******************************
             displayImage();
-        }
-        function zoomInHandler(zoomIn){
-            if(zoomIn===true){
-                zoomValue += 0.5;
-                zoomIn2_image();
-            }else{
-                zoomValue -= 0.5;
-                zoomIn2_image();
-            }
         }
         function bw_image() {
             // (중요!) 출력 영상의 크기를 결정 --> 알고리즘에 따름.
@@ -611,7 +613,7 @@
             for (var i = 0; i < outH; i++)
                 outImage[i] = new Array(outW);
             // ** 진짜 영상처리 알고리즘 구현 **
-            var value = parseInt(document.getElementById("addImage").value);
+            var value = parseInt(prompt("값", "50"));
             for (var i = 0; i < inH; i++) {
                 for (var k = 0; k < inW; k++) {
                     if (inImage[i][k] + value < 0)
@@ -622,11 +624,9 @@
                         outImage[i][k] = inImage[i][k] + value;
                 }
             }
-        
             // *******************************
-            displayImage(false);
+            displayImage();
         }
-
         function reverse_image() {
             // (중요!) 출력 영상의 크기를 결정 --> 알고리즘에 따름.
             outH = inH;
@@ -650,61 +650,74 @@
 </HEAD>
 
 <BODY onload="init()">
-    <div style="display: flex; justify-content: center; align-items: center; width: 100%; margin: 0 auto;">
-        <input type="file" id="inFile" onchange="openRawImage()" />
-    </div>
-    <div
-        style="display: flex; justify-content: center; align-items: center; height: 100vh; max-width: 800px; width: 100%; margin: 0 auto;">
-        <div
-            style="display: flex; flex-direction: column; align-items: center; background-color: white; padding: 30px; border-radius: 8px; box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);">
-            <div class="btn-group" role="group">
-                <button title="밝기 변화" type="button" class="btn btn-light"><i class="fas fa-sun"></i></button>
-                <button title="회전" type="button" class="btn btn-light"><i class="fas fa-redo"></i></button>
-                <button title="반전" type="button" class="btn btn-light"><i class="fas fa-adjust"></i></button>
-                <button title="확대" type="button" class="btn btn-light"><i class="fas fa-search-plus" onclick="zoomInHandler(true)"></i></button>
-                <button title="축소" type="button" class="btn btn-light"><i class="fas fa-search-minus" onclick="zoomInHandler(false)"></i></button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">자바스크립트를 이용한 이미지 처리 프로젝트</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/index.html">Home
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/features.html">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Developer</a>
+                    </li>
+                </ul>
             </div>
-            <br>
-            <input id="addImage" type="range" onchange="add_image()" value="0" min="-255" max="255">
-            <input id="rotateImage" type="range" onchange="rotate2_image()" value="0" min="-180" max="180">
-            <form>
-                <br>
-                <select name="pixel" onchange="selectAlgo(this.form.pixel)">
-                    <option value="0"> 선택하세요. </option>
-                    <optgroup label="화소점 처리">
-                        <option value="100"> 동일영상 </option>
-                        <option value="101"> 밝게/어둡게 </option>
-                        <option value="102"> 반전 </option>
-                        <option value="103"> 흑백(127) </option>
-                        <option value="104"> 흑백(평균값) </option>
-                        <option value="105"> 흑백(중위수) </option>
-                    </optgroup>
-                    <optgroup label="기하학 처리">
-                        <option value="200"> 축소 </option>
-                        <option value="201"> 확대 </option>
-                        <option value="202"> 확대(백워딩) </option>
-                        <option value="210"> 회전 </option>
-                        <option value="211"> 회전(중앙,백워딩) </option>
-                    </optgroup>
-                    <optgroup label="화소영역 처리">
-                        <option value="300"> 엠보싱 </option>
-                        <option value="301"> 블러링 </option>
-                        <option value="302"> 윤곽선 추출 </option>
-                    </optgroup>
-                    <optgroup label="히스토그램 처리">
-                        <option value="400"> 히스토그램 스트래칭 </option>
-                        <option value="401"> 엔드-인 탐색 </option>
-                        <option value="402"> 평활화 </option>
-                    </optgroup>
-                </select> <br>
-            </form>
-            <canvas id="inCanvas" height=256 width=256 style="background-color: rgb(255, 255, 255); margin-right: 10px;"></canvas>
-            <canvas style="display:none" id="outCanvas" height=256 width=256
-                style="background-color: aqua; margin-left: 10px;">
-            </canvas>
+        </div>
+    </nav>
+    <form>
+        <input class="form-control" type="file" id="inFile" onchange="openRawImage()" />
+        <select name="pixel" onchange="selectAlgo(this.form.pixel)">
+            <option value="0"> 선택하세요. </option>
+            <optgroup label="화소점 처리">
+                <option value="100"> 동일영상 </option>
+                <option value="101"> 밝게/어둡게 </option>
+                <option value="102"> 반전 </option>
+                <option value="103"> 흑백(127) </option>
+                <option value="104"> 흑백(평균값) </option>
+                <option value="105"> 흑백(중위수) </option>
+            </optgroup>
+            <optgroup label="기하학 처리">
+                <option value="200"> 축소 </option>
+                <option value="201"> 확대 </option>
+                <option value="202"> 확대(백워딩) </option>
+                <option value="210"> 회전 </option>
+                <option value="211"> 회전(중앙,백워딩) </option>
+            </optgroup>
+            <optgroup label="화소영역 처리">
+                <option value="300"> 엠보싱 </option>
+                <option value="301"> 블러링 </option>
+                <option value="302"> 윤곽선 추출 </option>
+            </optgroup>
+            <optgroup label="히스토그램 처리">
+                <option value="400"> 히스토그램 스트래칭 </option>
+                <option value="401"> 엔드-인 탐색 </option>
+                <option value="402"> 평활화 </option>
+            </optgroup>
+        </select> <br>
+    </form>
+    <div id="canvas-container">
+        <div class="canvas-box">
+            <label>원본이미지</label>
+            <canvas id="inCanvas" height=256 width=256 style="background-color: yellow"></canvas>
+        </div>
+        <div class="canvas-box">
+            <label>처리된이미지</label>
+            <canvas id="outCanvas" height=256 width=256 style="background-color: aqua"></canvas>
         </div>
     </div>
-
 </BODY>
 
 </HTML>
