--- a/features.html
+++ b/features.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">자바스크립트를 이용한 이미지 처리 프로젝트</a>
+            <a class="navbar-brand" href="#">자바스크립트를 이용한 이미지 처리</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
                 aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,44 +45,71 @@
             </div>
         </div>
     </nav>
-    <div style="margin-top:20px; margin-left:40px; margin-right:40px;">
+    <div style="margin-top:40px; margin-left:40px; margin-right:40px;">
         <h1>이미지 처리 프로젝트-특징</h1>
     </div>
+    <br>
     <div style="margin-top:20px; margin-left:40px; margin-right:40px;">
         <h2>화소점 처리</h2>
-        <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis
-            dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-        <p><small>This line of text is meant to be treated as fine print.</small></p>
-        <p>The following is <strong>rendered as bold text</strong>.</p>
-        <p>The following is <em>rendered as italicized text</em>.</p>
-        <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+        <br>
+        <h4>이미지 밝기 조절</h4>
+        <p>이미지 밝기 조절은 이미지의 픽셀값들을 증가시켜서 전체적으로 밝게, 혹은 감소시켜서 전체적으로 어둡게 만드는 작업입니다. 이를 통해 이미지의 세부사항을 조절할 수 있습니다.</p>
+        <h4>이미지 밝기 반전</h4>
+        <p>이미지 밝기 반전은 이미지의 밝은 부분을 어둡게, 어두운 부분을 밝게 반전시키는 작업입니다. 이를 통해 이미지의 대비를 높이는 효과를 가져올 수 있습니다.</p>
+        <h4>이미지 흑백화</h4>
+        <p>이미지 흑백화는 이미지를 흑백으로 변환하는 작업입니다. 이를 통해 이미지의 색상 정보를 제거하고, 명암 정보만을 남기는 것으로, 이미지를 단순화하여 처리할 때 유용합니다. 흑백화는 대부분의 컴퓨터
+            비전 알고리즘에서 사용됩니다.</p>
     </div>
     <div style="margin-top:20px; margin-left:40px; margin-right:40px;">
         <h2>기하학 처리</h2>
-        <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis
-            dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-        <p><small>This line of text is meant to be treated as fine print.</small></p>
-        <p>The following is <strong>rendered as bold text</strong>.</p>
-        <p>The following is <em>rendered as italicized text</em>.</p>
-        <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+        <br>
+        <h4>이미지 확대</h4>
+        <p> 이미지의 크기를 확대하는 것으로, 이미지의 픽셀 값을 증가시키는 방법입니다. 이를 통해 이미지가 더욱 세밀하게 표현됩니다. 백워딩 확대는 보간(interpolation) 방법을 사용하여 이미지의
+            해상도를 높이는 방법입니다.</p>
+        <h4>이미지 축소</h4>
+        <p>
+            이미지의 크기를 줄이는 것으로, 이미지의 픽셀 값을 감소시키는 방법입니다. 이미지 크기를 줄이면 이미지가 더욱 거칠게 표현됩니다. 보간 방법을 사용하여 이미지를 축소할 수 있습니다.
+        </p>
+        <h4>이미지 회전</h4>
+        <p>
+            이미지를 일정한 각도만큼 회전시키는 것입니다. 중앙 회전은 이미지의 중심을 중심으로 회전시키는 것이고, 백워딩 회전은 이미지를 회전시킨 후 원래 위치로 돌려놓는 것입니다. 회전 변환은 회전
+            중심, 회전 각도, 보간 방법 등을 설정할 수 있습니다. 회전 시 이미지의 일부가 잘리거나 빈 공간이 생길 수 있으므로, 이를 방지하기 위해 이미지의 크기를 조정하는 등의 후처리가 필요할 수
+            있습니다.
+        </p>
     </div>
     <div style="margin-top:20px; margin-left:40px; margin-right:40px;">
         <h2>화소영역 처리</h2>
-        <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis
-            dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-        <p><small>This line of text is meant to be treated as fine print.</small></p>
-        <p>The following is <strong>rendered as bold text</strong>.</p>
-        <p>The following is <em>rendered as italicized text</em>.</p>
-        <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+        <br>
+        <h4>이미지 엠보싱</h4>
+        <p>엠보싱은 이미지의 경계선을 강조하고 입체감을 부여하기 위해 사용되는 필터링 기법입니다. 이미지의 각 화소에 대해 주변의 화소값을 이용하여 새로운 화소값을 계산합니다. 계산된 화소값을 중심으로 상하
+            또는 좌우 방향으로 밝기가 강조된 모서리 효과를 만들어냅니다.</p>
+        <h4>이미지 블러링</h4>
+        <p>블러링은 이미지를 부드럽게 만들어주는 필터링 기법입니다. 이미지의 각 화소에 대해 주변의 화소값을 이용하여 새로운 화소값을 계산합니다. 계산된 화소값을 중심으로 노이즈를 제거하고 이미지를 흐리게
+            만들어줍니다.</p>
+        <h4>이미지 윤곽선 추출</h4>
+        <p>윤곽선 추출(Edge detection): 윤곽선 추출은 이미지에서 경계선을 강조하여 추출하는 필터링 기법입니다. 주로 엣지 검출 알고리즘이 사용되며, 이미지의 각 화소에 대해 주변의 화소값을
+            이용하여 엣지를 찾아냅니다.
+        </p>
     </div>
+
     <div style="margin-top:20px; margin-left:40px; margin-right:40px;">
         <h2>히스토그램 처리</h2>
-        <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis
-            dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-        <p><small>This line of text is meant to be treated as fine print.</small></p>
-        <p>The following is <strong>rendered as bold text</strong>.</p>
-        <p>The following is <em>rendered as italicized text</em>.</p>
-        <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+        <br>
+        <h4>히스토그램 스트레칭</h4>
+        <p>
+            히스토그램 스트레칭은 이미지의 히스토그램에서 밝기 값의 분포를 늘리는 방식으로 이미지를 개선하는 기술입니다. 이 방식은 이미지의 전체 픽셀 값 범위를 이용하여 이미지의 대비를 개선합니다.
+            히스토그램 스트레칭을 적용하면 어두운 영역은 더욱 어두워지고 밝은 영역은 더욱 밝아집니다. 이 방식은 이미지의 밝기를 일정 수준 이상 조절해야 하는 경우에 사용할 수 있습니다.
+        </p>
+        <h4>엔드-인 탐색</h4>
+        <p>
+            엔드-인 탐색은 이미지의 히스토그램에서 특정 밝기 값에 집중하여 이미지의 대비를 개선하는 방식입니다. 이 방식은 이미지에서 가장 어두운 영역과 가장 밝은 영역을 개선합니다. 따라서 이 방식은
+            이미지의 대부분을 어둡게 만들지 않고 대비를 개선하는 데 적합합니다.
+        </p>
+        <h4>평활화</h4>
+        <p>
+            평활화는 이미지에서 밝기 값이 특정한 범위에 집중되어 있을 때 이를 균일하게 분포시키는 방식입니다. 이 방식은 이미지에서 특정한 밝기 값에 집중되어 있는 경우에 유용합니다. 평활화를 적용하면
+            이미지 전체의 대비가 개선되므로, 이미지의 세부 정보를 분석하기 쉬워집니다.
+        </p>
     </div>
 
 
