--- a/index.html
+++ b/index.html
@@ -675,12 +675,12 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/index.html">Home
+                        <a class="nav-link active" href="https://janathanni.github.io/javascript-miniproject">Home
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/features.html">Features</a>
+                        <a class="nav-link" href="https://janathanni.github.io/javascript-miniproject/features.html">Features</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -696,6 +696,9 @@
         <input class="form-control" type="file" id="inFile" value="RAW 이미지 파일 첨부하기" placeholder="파일을 첨부해주세요."
             onchange="openRawImage()" />
     </form>
+    <br>
+    <br>
+    <br
     <div class="container">
         <div id="div1">
             <h5>화소점 처리</h5>
