--- a/features.html
+++ b/features.html
@@ -27,11 +27,11 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home
+                        <a class="nav-link" href="https://janathanni.github.io/javascript-miniproject">Home
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/features.html">Features
+                        <a class="nav-link active" href="https://janathanni.github.io/javascript-miniproject/features.html">Features
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
